[package]
name = "rust-knapsack"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56", features = [
    "tcp",
    "dns",
    "kad",
    "request-response",
    "cbor",
    "noise",
    "yamux",
    "macros",
    "tokio",
] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
shlex = "1.1"
dirs = "5.0"
